# trowel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Justfile  README.md  mise.toml
.claude/commands/: cut-major-release.md  cut-minor-release.md  cut-patch-release.md
.github/workflows/: release.yml
Casks/: trowel.rb
Trowel Icon.icon/: icon.json
cmake/: scintilla_qt.cmake
docs/: PLAN.md  directory-view.md  experiment-flags.md  smoke-tests.md  tab-bar.md
docs/guides/: keyboard-shortcuts.md  signing-and-notarization.md
docs/plans/: button-bar.md  codesigning-plan.md  embedded-turmeric.md  notarization-plan.md  socket-api.md
resources/: Info.plist.in  resources.qrc  trowel-cli.sh  trowel.icns  turmeric-dark.theme.json
resources/linux/: com.turmeric_lang.Trowel.metainfo.xml  trowel.desktop  trowel.xml
scripts/: build-appimage.sh  codesign-app.sh  notarize-app.sh  trowel-ctl
src/: main.cpp
src/app/: directory_view.cpp  directory_view.h  icon_font.cpp  icon_font.h  main_window.cpp  main_window.h  preferences_view.cpp  preferences_view.h  single_instance.cpp  single_instance.h  tab_bar.cpp  tab_bar.h  tab_content.h  trowel_application.cpp  trowel_application.h
src/control/: control_connection.cpp  control_connection.h  control_handlers.cpp  control_handlers.h  control_server.cpp  control_server.h
src/editor/: editor_view.cpp  editor_view.h  theme_loader.cpp  theme_loader.h  turmeric_lexer.cpp  turmeric_lexer.h
src/repl/: pty_session.cpp  pty_session.h  repl_session.cpp  repl_session.h  run_buffer.cpp  run_buffer.h  terminal_view.cpp  terminal_view.h
tests/smoke/: conftest.py  pytest.ini  test_editor_io.py  test_editor_text.py  test_lexer_theme.py  test_menu.py  test_repl.py  test_run_buffer.py  test_shutdown.py  test_single_instance.py  test_startup.py
tests/smoke/artifacts/: test_repl_survives_syntax_error.state.json
tests/smoke/fixtures/: defs.tur  hello.tur  sweet_hello.tur.sweet  syntax_error.tur
tests/support/: trowel_ctl.py
